; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hx509/extr_hxtool.c_print_f.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hx509/extr_hxtool.c_print_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.print_s = type { i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"cert: %d\0A\00", align 1
@context = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @print_f to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @print_f(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.print_s*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.print_s*
  store %struct.print_s* %9, %struct.print_s** %7, align 8
  %10 = load %struct.print_s*, %struct.print_s** %7, align 8
  %11 = getelementptr inbounds %struct.print_s, %struct.print_s* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  %14 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %12)
  %15 = load i32, i32* @context, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.print_s*, %struct.print_s** %7, align 8
  %18 = getelementptr inbounds %struct.print_s, %struct.print_s* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @print_certificate(i32 %15, i32 %16, i32 %19)
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @print_certificate(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
